# schemlogica

./: .gitignore  Cargo.toml  README.md
examples/: input.js  simple.js
scripts/: read_litematic.rs
src/: compiler.rs  layout.rs  main.rs  optimizer.rs  parser.rs  primitives.rs  schematic.rs  semantics.rs
